# gpt-data-dictionary

./: .gitignore  README.md  pyproject.toml
data_dictionary/: __init__.py
examples/: anyscale_endpoints.py
notebooks/: 0.0.1-han-scrapbook.ipynb  0.0.1-titanic-dataset-demo.ipynb
scripts/: extract_data_dictionary.py
